--- a/documentation/documents/compiled_queries/index.html
+++ b/documentation/documents/compiled_queries/index.html
@@ -153,6 +153,9 @@ await batch.Execute();
 <li><code>OrderBy/OrderByDescending</code> etc.</li>
 <li><code>Count()</code></li>
 <li><code>Any()</code></li>
+<li><code>AsJson()</code></li>
+<li><code>ToJsonArray()</code></li>
+<li><code>ToJsonArrayAsync()</code></li>
 </ul>
 <p>At this point (v0.9), the only limitations are:</p>
 <ol>
@@ -204,7 +207,7 @@ await batch.Execute();
     }
 </code></pre>
 <h2>Querying for a single document</h2>
-<p>Finally, if you are querying for a single document with no transformation, you can use this interface as a convenience:</p>
+<p>If you are querying for a single document with no transformation, you can use this interface as a convenience:</p>
 <pre><code class="language-csharp">
     public interface ICompiledQuery&lt;TDoc&gt; : ICompiledQuery&lt;TDoc, TDoc&gt;
     {
@@ -227,6 +230,62 @@ await batch.Execute();
         }
     }
 </code></pre>
+<h2>Querying for multiple results as Json</h2>
+<p>To query for multiple results and have them returned as a Json string, you may run any query on your <code>IQueryable&lt;T&gt;</code> (be it ordering or filtering) and then simply finalize the query with <code>ToJsonArray();</code> like so:</p>
+<pre><code class="language-csharp">
+    public class FindJsonOrderedUsersByUsername : ICompiledQuery&lt;User, string&gt;
+    {
+        public string FirstName { get; set; }
+        public Expression&lt;Func&lt;IQueryable&lt;User&gt;, string&gt;&gt; QueryIs()
+        {
+            return query =&gt;
+                    query.Where(x =&gt; FirstName == x.FirstName)
+                        .OrderBy(x =&gt; x.UserName)
+                        .ToJsonArray();
+
+        }
+    }
+</code></pre>
+<p>If you wish to do it asynchronously, you can use the <code>ToJsonArrayAsync()</code> method.</p>
+<p>A sample usage of this type of query is shown below:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public void a_sorted_list_compiled_query_AsJson()
+        {
+            var user = theSession.Query(new FindJsonOrderedUsersByUsername() {FirstName = &quot;Jeremy&quot; });
+
+            user.ShouldNotBeNull();
+            user.ShouldBe($&quot;[{_user1.ToJson()},{_user5.ToJson()}]&quot;);
+        }
+</code></pre>
+<p>Note that the result has the documents comma separated and wrapped in angle brackets (as per the Json notation).</p>
+<h2>Querying for a single document</h2>
+<p>Finally, if you are querying for a single document as json, you will need to prepend your call to <code>Single()</code>, <code>First()</code> and so on with a call to <code>AsJson()</code>:</p>
+<pre><code class="language-csharp">
+    public class FindJsonUserByUsername : ICompiledQuery&lt;User, string&gt;
+    {
+        public string Username { get; set; }
+        public Expression&lt;Func&lt;IQueryable&lt;User&gt;, string&gt;&gt; QueryIs()
+        {
+            return query =&gt;
+                    query.Where(x =&gt; Username == x.UserName)
+                        .AsJson().Single();
+
+        }
+    }
+</code></pre>
+<p>And an example:</p>
+<pre><code class="language-csharp">
+        [Fact]
+        public void a_single_item_compiled_query_AsJson()
+        {
+            var user = theSession.Query(new FindJsonUserByUsername() {Username = &quot;jdm&quot;});
+
+            user.ShouldNotBeNull();
+            user.ShouldBe(_user1.ToJson());
+        }
+</code></pre>
+<p>(our ToJson method simply reuturns a string representation of the <code>User</code> instance in Json notation)</p>
 
 
 			      	</div>
