--- a/documentation/documents/batched_queries/index.html
+++ b/documentation/documents/batched_queries/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.9.0</h3>
+		      	<h3>Marten 0.9.2</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -158,6 +158,20 @@ await batch.Execute();
 (await justin).Id.ShouldBe(user1.Id);
 (await tamba).Id.ShouldBe(user2.Id);
 </code></pre>
+<h2>Running Synchronously</h2>
+<p>As of v0.9.1, Marten also exposes the batch querying functionality with a synchronous option:</p>
+<pre><code class="language-csharp">
+var batch = theSession.CreateBatchQuery();
+
+var justin = batch.Query(new FindByFirstName { FirstName = &quot;Justin&quot; });
+var tamba = batch.Query(new FindByFirstName { FirstName = &quot;Tamba&quot; });
+
+batch.ExecuteSynchronously();
+
+justin.Result.Id.ShouldBe(user1.Id);
+tamba.Result.Id.ShouldBe(user2.Id);
+</code></pre>
+<p>The mechanics of running synchronously are identical except for calling <code>IBatchedQuery.ExecuteSynchronously()</code>.</p>
 
 
 			      	</div>
