--- a/documentation/events/appending/index.html
+++ b/documentation/events/appending/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.9.0</h3>
+		      	<h3>Marten 0.9.2</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -123,16 +123,16 @@ you could just supply either a string to mark the &quot;stream type&quot; or wor
 <p>As usual, our sample problem domain is the Lord of the Rings style &quot;Quest.&quot; For now, you can either start a new stream and let Marten assign the Guid
 id for the stream:</p>
 <pre><code class="language-csharp">
-                var joined = new MembersJoined { Members = new string[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };
-                var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };
+                var joined = new MembersJoined {Members = new[] {&quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot;}};
+                var departed = new MembersDeparted {Members = new[] {&quot;Thom&quot;}};
 
                 var id = session.Events.StartStream&lt;Quest&gt;(joined, departed);
                 session.SaveChanges();
 </code></pre>
 <p>Or have Marten use a Guid value that you provide yourself:</p>
 <pre><code class="language-csharp">
-                var joined = new MembersJoined { Members = new string[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };
-                var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };
+                var joined = new MembersJoined {Members = new[] {&quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot;}};
+                var departed = new MembersDeparted {Members = new[] {&quot;Thom&quot;}};
 
                 var id = Guid.NewGuid();
                 session.Events.StartStream&lt;Quest&gt;(id, joined, departed);
@@ -142,8 +142,8 @@ id for the stream:</p>
 <h2>Appending Events</h2>
 <p>If you have an existing stream, you can later append additional events with <code>IEventStore.Append()</code> as shown below:</p>
 <pre><code class="language-csharp">
-                var joined = new MembersJoined { Members = new string[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };
-                var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };
+                var joined = new MembersJoined {Members = new[] {&quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot;}};
+                var departed = new MembersDeparted {Members = new[] {&quot;Thom&quot;}};
 
                 session.Events.Append(id, joined, departed);
 
