--- a/documentation/events/streams/index.html
+++ b/documentation/events/streams/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.9.0</h3>
+		      	<h3>Marten 0.9.2</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -158,7 +158,7 @@
 </code></pre>
 <h2>Stream State</h2>
 <p>If you just need to check on the state of an event stream - what version it is and what if any aggregate type it represents - you can use the
-<code>IEventStore.FetchStreamState()/FetchStreamStateAsync()</code> methods shown below:</p>
+<code>IEventStore.FetchStreamState()/FetchStreamStateAsync()</code> methods or through <code>IBatchQuery.Events.FetchStreamState()</code> shown below:</p>
 <pre><code class="language-csharp">
     public class fetching_stream_state : DocumentSessionFixture&lt;NulloIdentityMap&gt;
     {
@@ -181,6 +181,7 @@
             state.Id.ShouldBe(theStreamId);
             state.Version.ShouldBe(2);
             state.AggregateType.ShouldBe(typeof(Quest));
+            state.LastTimestamp.ShouldNotBe(DateTime.MinValue);
         }
 
         [Fact]
@@ -191,6 +192,25 @@
             state.Id.ShouldBe(theStreamId);
             state.Version.ShouldBe(2);
             state.AggregateType.ShouldBe(typeof(Quest));
+            state.LastTimestamp.ShouldNotBe(DateTime.MinValue);
+        }
+
+        [Fact]
+        public async Task can_fetch_the_stream_version_through_batch_query()
+        {
+            var batch = theSession.CreateBatchQuery();
+
+            var stateTask = batch.Events.FetchStreamState(theStreamId);
+
+            await batch.Execute();
+
+            var state = await stateTask;
+
+            state.Id.ShouldBe(theStreamId);
+            state.Version.ShouldBe(2);
+            state.AggregateType.ShouldBe(typeof(Quest));
+            state.LastTimestamp.ShouldNotBe(DateTime.MinValue);
+
         }
     }
 </code></pre>
